# SEAD

./: LSTM.py  README.md  action_anticipation.py  action_anticipation_test.py  action_anticipation_train.py  config.py  scene_predict.py
adios/: CMakeLists.txt  Makefile  ModifiedADIOS.pro  RDSGraph.cpp  RDSGraph.h  RDSNode.h  adios.pro  madios.pro  main.cpp
adios/math/: STLArithmetics.h
adios/math/tnt/: array1d.h  array2d.h
annotations/: Charades_v1_classes.txt  Charades_v1_test.csv  Charades_v1_train.csv  object_classes.txt
corpus/: sofa.txt
data/corpus/: sofa.txt
data/duration/: sofa.txt  sofa_duration.txt
data/grammar/: sofa.pcfg
